--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/MostrarSucursales.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/MostrarSucursales.cshtml
@@ -32,6 +32,7 @@
                                     <th>Direccion Sucursal</th>
                                     <th>Id de la direccion</th>
                                     <th>Estado</th>
+                                    <th>Acciones</th>
 
                                 </tr>
                             </thead>
@@ -43,7 +44,7 @@
                                         <td>@item.nombreSucursal</td>
                                         <td>@item.direccionSucursal</td>
                                         <td>@item.idCiudadSucursal</td>
-                                        <td>@item.estado</td>
+                                        
 
                                         @if (item.estado)
                                         {
