--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/ActualizarSucursal.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/ActualizarSucursal.cshtml
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group my-3">
                                 @Html.Label("ID de la Ciudad")
-                                @Html.TextBoxFor(m => m.idCiudadSucursal, new { @class = "form-control", @placeholder = "Ciudad", @required = "true" })
+                                @Html.DropDownListFor(m => m.idCiudadSucursal, ViewBag.Cuidades as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
                                 @Html.ValidationMessageFor(m => m.idCiudadSucursal, "", new { @class = "text-danger" })
                                 <div class="invalid-feedback">Por favor, escoga un id respectivo</div>
                             </div>
