--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/MostrarClientes.cshtml
@@ -33,7 +33,10 @@
                                     <th>Dirección</th>
                                     <th>Email</th>
                                     <th>Estado</th>
-                                    <th>Acciones</th>
+                                    @if (Session["RolUsuario"].ToString() == "1")
+                                    {
+                                        <th>Acciones</th>
+                                    }
                                 </tr>
                             </thead>
                             <tbody>
@@ -54,13 +57,15 @@
                                         {
                                             <td>Inactivo</td>
                                         }
-
-                                        <td>
-                                            <div style="text-align:center">
-                                                <a href="@Url.Action("ActualizarCliente","Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
-                                                <a href="@Url.Action("EliminarCliente","Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
-                                            </div>
-                                        </td>
+                                        @if (Session["RolUsuario"].ToString() == "1")
+                                        {
+                                            <td>
+                                                <div style="text-align:center">
+                                                    <a href="@Url.Action("ActualizarCliente", "Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
+                                                    <a href="@Url.Action("EliminarCliente", "Cliente", new { id = @item.idCliente })" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
+                                                </div>
+                                            </td>
+                                        }
                                     </tr>
                                 }
                             </tbody>
