--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/NuevoCliente.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/NuevoCliente.cshtml
@@ -24,8 +24,8 @@
                         @using (Html.BeginForm("NuevoCliente", "Cliente", FormMethod.Post, new { @class = "row g-3 needs-validation", novalidate = "novalidate" }))
                         {
                             <div class="form-group my-4">
-                                @Html.Label("Nombre del Cliente")
-                                @Html.TextBoxFor(m => m.nombreCliente, new { @class = "form-control", @placeholder = "Nombre", @required = "true", @type = "text", @maxlength = "15" })
+                                @Html.Label("Nombre Completo del Cliente")
+                                @Html.TextBoxFor(m => m.nombreCliente, new { @class = "form-control", @placeholder = "Nombre", @required = "true", @type = "text", @maxlength = "100" })
                                 @Html.ValidationMessageFor(m => m.nombreCliente, "", new { @class = "text-danger" })
                                 <div class="invalid-feedback">Por favor, ingrese el nombre del cliente</div>
                             </div>
