--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <link href="~/Estilos/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="~/Estilos/assets/vendor/simple-datatables/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet" />
 
 
     <!-- Template Main CSS File -->
@@ -104,11 +105,11 @@
         }
 
         .sidebar {
-            height: 100vh; 
-            width: 250px; 
-            background: linear-gradient(to bottom, #1e3c72, #2a5298); 
+            height: 100vh;
+            width: 250px;
+            background: linear-gradient(to bottom, #1e3c72, #2a5298);
             position: fixed;
-            overflow-y: auto; 
+            overflow-y: auto;
             box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
             padding-top: 40px;
         }
@@ -120,22 +121,21 @@
         }
 
         .nav-item {
-            margin: 20px 0; 
+            margin: 20px 0;
         }
 
         .nav-link {
             display: block;
             color: #ffffff;
             text-decoration: none;
-            padding: 20px 30px; 
+            padding: 20px 30px;
             border-radius: 10px;
-         
-            transition: background-color 0.3s, box-shadow 0.3s; 
+            transition: background-color 0.3s, box-shadow 0.3s;
         }
 
             .nav-link:hover {
-                background-color: #c0c0c0; 
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+                background-color: #c0c0c0;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             }
 
             .nav-link span {
@@ -207,6 +207,7 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
+    
     <script src="~/Estilos/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/Estilos/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/Estilos/assets/vendor/chart.js/chart.umd.js"></script>
@@ -215,6 +216,7 @@
     <script src="~/Estilos/assets/vendor/simple-datatables/simple-datatables.js"></script>
     <script src="~/Estilos/assets/vendor/tinymce/tinymce.min.js"></script>
     <script src="~/Estilos/assets/vendor/php-email-form/validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="~/Estilos/assets/js/main.js"></script>
