--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
@@ -172,6 +172,11 @@
                     <span>Reporte</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("MostrarAuditoria","Auditoria")">
+                    <span>Auditoria</span>
+                </a>
+            </li>
         </ul>
     </aside><!-- End Sidebar-->
 
