--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
@@ -22,8 +22,20 @@
                             </div>
                         }
 
+                        <div class="row mb-3">
+                            <div class="col">
+                                <label for="sucursal">Sucursal:</label>
+                                @Html.DropDownList("sucursal", ViewBag.SucursalesNombre as List<SelectListItem>, new { @class = "form-control", @id = "sucursal" })
+                            </div>
+                            <div class="col d-flex align-items-end">
+                                <button class="btn btn-primary" onclick="filtrarCitas()">Buscar</button>
+                            </div>
+                        </div>
+
                         <div style="margin-bottom:1%; text-align:right">
                             <a class="btn btn-primary" href="@Url.Action("NuevoCita", "Cita")"> + Agregar</a>
+                            <button class="btn btn-secondary mx-2" onclick="ordenarPorHora()">Ordenar por Hora</button>
+                            <button class="btn btn-secondary" onclick="ordenarPorNombre()">Ordenar por Nombre</button>
                         </div>
 
                         <table id="myDataTable" class="table table-bordered" style="width: 100%;">
@@ -80,30 +92,6 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                    @using (Html.BeginForm("Calendario", "Cita", FormMethod.Get))
-                    {
-                        <div class="form-group my-3 text-center">
-                            @Html.Label("Sucursal para el calendario", new { @class = "my-3" })
-                            @Html.DropDownList("idSucursal", ViewBag.Sucursales as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
-                            @Html.ValidationMessage("idSucursal", "", new { @class = "text-danger" })
-                        </div>
-
-                        <div style="display: flex; align-items: center; flex-direction: column;">
-                            <input type="submit" class="btn btn-primary btn-block" value="Consultar Calendario" style="margin-top: 20px; margin-bottom: 20px;">
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <!-- CDN de DataTables -->
 <link href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -117,6 +105,22 @@
             }
         });
     });
+
+    function filtrarCitas() {
+        var sucursal = $('#sucursal').val();
+
+        $('#myDataTable').DataTable().column(3).search(sucursal).draw(); // Filtrar por columna de Sucursal
+    }
+
+    function ordenarPorHora() {
+        var table = $('#myDataTable').DataTable();
+        table.order([5, 'asc']).draw(); // Ordenar por Fecha Hora (índice 5)
+    }
+
+    function ordenarPorNombre() {
+        var table = $('#myDataTable').DataTable();
+        table.order([1, 'asc']).draw(); // Ordenar por Nombre Cliente (índice 1)
+    }
 </script>
 
 <style>
